_docs/v0.49/configuring-metabase/appearance.md
---
version: v0.49
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: 'Configuring Metabase'
title: Appearance
source_url: 'https://github.com/metabase/metabase/blob/master/docs/configuring-metabase/appearance.md'
layout: new-docs
redirect_from:
    - /docs/v0.49/administration-guide/whitelabeling
    - /docs/v0.49/enterprise-guide/whitelabeling
    - /docs/v0.49/enterprise-guide/customize-embeds
    - /docs/v0.49/embedding/whitelabeling
    - /docs/v0.49/embedding/fonts
    - /docs/v0.49/embedding/customize-embeds
---

# Appearance

{% include plans-blockquote.html feature="Custom appearance" %}

Appearance settings give you the option to white label Metabase to match your company’s branding.

If you're looking for date, time, number, or currency formatting, see [Formatting defaults](../data-modeling/formatting).

## Changing Metabase's appearance

Click on the gear icon at the bottom of the navigation sidebar and select **Admin settings** > **Settings** > **Appearance**. Here’s what you can do:

## De-Metabasing your Metabase for embedding

When embedding Metabase in your app, in addition to changing colors and fonts, you can show or hide Metabase-branded UI elements and links (like in-app links to Metabase's documentation). If you're embedding Metabase in your app, here are some settings you might want to change:

- [Application name](#application-name)
- [Logo](#logo)
- [Favicon](#favicon)
- [Loading message](#loading-message)
- [Help link in the settings menu](#help-link-in-the-settings-menu)
- [Metabot](#metabot)
- [Lighthouse illustration](#lighthouse-illustration)
- [Documentation and reference](#documentation-and-references)

## Application name

You can change every place in the app that says “Metabase” to something like “Acme Analytics,” or whatever you want to call your Metabase app.

## Font

This is the primary font used in charts and throughout the Metabase application (your "instance font"). See [Fonts](./fonts).

## Color palette

You can customize colors in both the application UI and in the Metabase charts.

### User interface colors

![User interface colors](./images/user-interface-colors.png)

You can customize the colors that Metabase uses throughout the app:

- **First color:** The main color used throughout the app for buttons, links, and the default chart color.
- **Second color:** The color of aggregations and breakouts in the graphical query builder.
- **Third color:** Color of filters in the query builder, buttons and links in filter widgets.

### Chart colors

![Chart colors](./images/chart-colors.png)

You can choose up to 24 hex values. If you choose fewer than 24 colors, Metabase will auto-generate colors to fill in the rest of the values.

Custom colors are unavailable for:

- [Number charts](../questions/sharing/visualizing-results#numbers)
- [Trend charts](../questions/sharing/visualizing-results#trends)
- [Funnel charts](../questions/sharing/visualizing-results#funnel-charts)
- Conditional formatting ([tables](../questions/sharing/visualizing-results#tables) and [pivot tables](../questions/sharing/visualizing-results#pivot-tables))
- [Maps](../questions/sharing/visualizing-results#maps)

## Logo

You can replace Metabase’s familiar, tasteful, inspired-yet-not-threateningly-avant-garde dotted M logo with your very own logo. For things to work best, the logo you upload should be an SVG file that looks good when it’s around 60px tall. (In other words, ask the nearest designer for help.)

## Favicon

The URL or image that you want to use as the favicon. Note that if you use a relative path, that path isn't relative to the Metabase JAR, but to the webserver. So unless you're using a reverse-proxy, the path will be relative to the frontend resources available to the JAR.

## Landing page

The landing page is what people will see whenever they login. You can set the URL to a collection, question, dashboard or whatever, just make sure that everyone has access to that URL.

## Loading message

This message is the text Metabase presents when it's loading a query. Options include:

- "Doing science..." (the default)
- "Running query..."
- "Loading results..."

## Help link in the settings menu

The Settings menu (the "gear" menu in the upper right of your Metabase) includes a **Help** option that links to a [Metabase help page](/help/) by default. You can change this menu Help item by selecting one of the following options:

- Link to [Metabase help](/help/) (default)
- Hide it (the Settings menu won't display the Help option at all).
- Go to a custom destination. Enter a URL that the Settings menu's Help option should link to. Valid URLs include http, https, and mailto URLs.

## Metabot

![Metabot toggle](./images/metabot.png)

You can decide whether to display our little friend on the home page.

## Lighthouse illustration

Show the Metabase lighthouse image on the home and login pages.

## Documentation and references

Control the visibility of links to official Metabase documentation and other references to Metabase in your instance.

This setting affects all links in the product experience that point to Metabase.com URLs (with the exception of links and references in the Admin settings).

## Further reading

- [Customer-facing analytics](/learn/customer-facing-analytics).
- [Embedding introduction](../embedding/start).
- [Brand your Metabase](/learn/embedding/brand).
